--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h3 class="header_text_bold">José Granados</h3>
         </div>
 
-        <!-- Nav-Menu -->
+        <!-- Navigation-Menu -->
         <ul class="header_nav">
           <li><a class="header_nav_menu">About me</a></li>
           <li><a class="header_nav_menu">Skills</a></li>
@@ -31,8 +31,54 @@
       </nav>
     </header>
 
-    <main>
-        
+    <main class="container">
+      <section class="principal_section_container">
+        <article class="principal_article">
+          <header>
+            <h1 class="principal_title">
+              Hi, my name is José Granados and I am learning web development
+            </h1>
+          </header>
+          <p>
+            Trained in ... Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Maiores neque fugiat libero perspiciatis id suscipit tenetur
+            consequatur, pariatur illo. Autem perferendis expedita corporis est
+            mollitia totam atque deleniti accusamus quasi?
+          </p>
+          <nav class="social_networks_nav">
+            <ul class="social_networks_list">
+              <li class="social_networks_item">
+                <a href="·">Github</a>
+                <img
+                  src="./img/main/arrow_back_black_24dp 1.png"
+                  alt="logo_nav"
+                />
+              </li>
+              <li class="social_networks_item">
+                <a href="·">Linkedin</a>
+                <img
+                  src="./img/main/arrow_back_black_24dp 1.png"
+                  alt="logo_nav"
+                />
+              </li>
+              <li class="social_networks_item">
+                <a href="·">Instagram</a>
+                <img
+                  src="./img/main/arrow_back_black_24dp 1.png"
+                  alt="logo_nav"
+                />
+              </li>
+            </ul>
+          </nav>
+        </article>
+        <img src="./img/main/unsplash_anAAZ0nrqBY.png" alt="img_me" />
+      </section>
+
+      <section class="aboutme_section_container"></section>
+      <section class="skills_section_container"></section>
+      <section class="traingin_section_container"></section>
+      <section class="training_section_container"></section>
+      <section class="Projects"></section>
     </main>
 
     <footer></footer>
