about me section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,26 @@
         <img src="./img/main/unsplash_anAAZ0nrqBY.png" alt="img_me" />
       </section>
 
-      <section class="aboutme_section_container"></section>
+      <section class="aboutme_section_container">
+        <article class="aboutme_article">
+          <header>
+            <h1 class="title_section">About Me</h1>
+          </header>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Consectetur deleniti, quibusdam aperiam ducimus quam amet sunt
+            laboriosam reiciendis modi praesentium provident reprehenderit
+            iusto, quas voluptatum suscipit enim velit cupiditate eaque.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+            veniam voluptate illo placeat sint culpa? Doloremque, minus minima
+            velit omnis iure odio inventore suscipit aliquid assumenda iste
+            possimus temporibus vel.
+          </p>
+        </article>
+      </section>
+
       <section class="skills_section_container"></section>
       <section class="traingin_section_container"></section>
       <section class="training_section_container"></section>
