--- a/index.html
+++ b/index.html
@@ -94,7 +94,36 @@
         </article>
       </section>
 
-      <section class="skills_section_container"></section>
+      <section class="skills_section_container">
+        <article class="skills_article">
+          <header></header>
+            <h1 class="title_section">Skills</h1>
+          </header>
+          <ul class="skills_list">
+            <li class="skills_item">
+              <p>Html5</p>
+              <img src="./img/main/skills/html.png" alt="logo_html">
+            </li>
+            <li class="skills_item">
+              <p>css</p>
+              <img src="./img/main/skills/css-file 1.png" alt="logo_css">
+            </li>
+            <li class="skills_item">
+              <p>JavaScript</p>
+              <img src="./img/main/skills/js.png" alt="logo_js">
+            </li>
+            <li class="skills_item">
+              <p>C++</p>
+              <img src="./img/main/skills/c++.png" alt="logo_c++">
+            </li>
+            <li class="skills_item">
+              <p>Node JS</p>
+              <img src="./img/main/skills/nodejs.png" alt="logo_nodejs">
+            </li>
+          </ul>
+        </article>
+      </section>
+      
       <section class="traingin_section_container"></section>
       <section class="training_section_container"></section>
       <section class="Projects"></section>
