--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <ul class="header_nav">
           <li><a class="header_nav_menu">About me</a></li>
           <li><a class="header_nav_menu">Skills</a></li>
-          <li><a class="header_nav_menu">Training</a></li>
+          <li><a class="header_nav_menu">Hobbies</a></li>
+          <li><a class="header_nav_menu">Academic Training</a></li>
           <li><a class="header_nav_menu">Projects</a></li>
           <li><a class="header_text_bold">contact@contact.com</a></li>
         </ul>
@@ -124,8 +125,37 @@
         </article>
       </section>
       
-      <section class="traingin_section_container"></section>
-      <section class="training_section_container"></section>
+      <section class="hobbies_section_container">
+        <article class="hobbies_article">
+          <header></header>
+            <h1 class="title_section">Hobbies</h1>
+          </header>
+          <ul class="hobbies_list">
+            <li class="hobbies_item">
+              <p>GYM</p>
+              <img src="./img/main/hobbies/gym.png" alt="logo_html">
+            </li>
+            <li class="hobbies_item">
+              <p>Listen to music</p>
+              <img src="./img/main/hobbies/music.png" alt="logo_css">
+            </li>
+            <li class="hobbies_item">
+              <p>Watch series</p>
+              <img src="./img/main/hobbies/seires.png" alt="logo_js">
+            </li>
+            <li class="hobbies_item">
+              <p>Cook</p>
+              <img src="./img/main/hobbies/cook.png" alt="logo_c++">
+            </li>
+            <li class="hobbies_item">
+              <p>Play video games</p>
+              <img src="./img/main/hobbies/video games.png" alt="logo_nodejs">
+            </li>
+          </ul>
+        </article>
+      </section>
+
+      <section class="academy_training_section_container"></section>
       <section class="Projects"></section>
     </main>
 
