--- a/index.html
+++ b/index.html
@@ -133,29 +133,58 @@
           <ul class="hobbies_list">
             <li class="hobbies_item">
               <p>GYM</p>
-              <img src="./img/main/hobbies/gym.png" alt="logo_html">
+              <img src="./img/main/hobbies/gym.png" alt="logo_gym">
             </li>
             <li class="hobbies_item">
               <p>Listen to music</p>
-              <img src="./img/main/hobbies/music.png" alt="logo_css">
+              <img src="./img/main/hobbies/music.png" alt="logo_music">
             </li>
             <li class="hobbies_item">
               <p>Watch series</p>
-              <img src="./img/main/hobbies/seires.png" alt="logo_js">
+              <img src="./img/main/hobbies/seires.png" alt="logo_series">
             </li>
             <li class="hobbies_item">
               <p>Cook</p>
-              <img src="./img/main/hobbies/cook.png" alt="logo_c++">
+              <img src="./img/main/hobbies/cook.png" alt="logo_cook">
             </li>
             <li class="hobbies_item">
               <p>Play video games</p>
-              <img src="./img/main/hobbies/video games.png" alt="logo_nodejs">
+              <img src="./img/main/hobbies/video games.png" alt="logo_video_games">
             </li>
           </ul>
         </article>
       </section>
 
-      <section class="academy_training_section_container"></section>
+      <section class="academy_training_section_container">
+        <article class="academy_training_article">
+          <header></header>
+            <h1 class="title_section">Academy Training</h1>
+          </header>
+          <ul class="academy_training_list">
+            <li class="academy_training_item">
+              <div class="academy_training_img">
+                <img src="./img/main/academy/unimag.png" alt="logo_unimag">
+              </div>
+              <h2>Electronic engineer</h2>
+              <p>2022 - Universidad del Magdalena</p>
+            <li class="academy_training_item">
+              <div class="academy_training_img">
+                <img src="./img/main/academy/alura.png" alt="logo_alura">
+              </div>
+              <h2>Front End G7 - ONE</h2>
+              <p>In progress - Alura</p>
+            </li>
+            <li class="academy_training_item">
+              <div class="academy_training_img">
+                <img src="./img/main/academy/udecataluña.png" alt="logo_alura">
+              </div>
+              <h2>Diplomado en Desarrollo Web </h2>
+              <p>In progress - U de Cataluña</p>
+            </li>
+          </ul>
+        </article>
+      </section>
+
       <section class="Projects"></section>
     </main>
 
