--- a/index.html
+++ b/index.html
@@ -1,193 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/flexbox.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="header_container">
-        <!-- Title-Logo -->
-        <div class="header_logo">
-          <img
-            class="img_logo"
-            src="./img/header/auto_awesome_black_24dp 1.png"
-            alt="img_logo"
-          />
-          <h3 class="header_text_bold">José Granados</h3>
-        </div>
 
-        <!-- Navigation-Menu -->
-        <ul class="header_nav">
-          <li><a class="header_nav_menu">About me</a></li>
-          <li><a class="header_nav_menu">Skills</a></li>
-          <li><a class="header_nav_menu">Hobbies</a></li>
-          <li><a class="header_nav_menu">Academic Training</a></li>
-          <li><a class="header_nav_menu">Projects</a></li>
-          <li><a class="header_text_bold">contact@contact.com</a></li>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portafolio</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/flexbox.css" />
+</head>
+
+<body>
+  <header>
+    <nav class="header_container">
+      <!-- Title-Logo -->
+      <div class="header_logo">
+        <img class="img_logo" src="./img/header/auto_awesome_black_24dp 1.png" alt="img_logo" />
+        <h3 class="header_text_bold">José Granados</h3>
+      </div>
+
+      <!-- Navigation-Menu -->
+      <ul class="header_nav">
+        <li><a class="header_nav_menu">About me</a></li>
+        <li><a class="header_nav_menu">Skills</a></li>
+        <li><a class="header_nav_menu">Hobbies</a></li>
+        <li><a class="header_nav_menu">Academic Training</a></li>
+        <li><a class="header_nav_menu">Projects</a></li>
+        <li><a class="header_text_bold">contact@contact.com</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="container">
+    <section class="principal_section_container">
+      <article class="principal_article">
+        <header>
+          <h1 class="principal_title">
+            Hi, my name is José Granados and I am learning web development
+          </h1>
+        </header>
+        <p>
+          Trained in ... Lorem ipsum dolor sit amet, consectetur adipisicing
+          elit. Maiores neque fugiat libero perspiciatis id suscipit tenetur
+          consequatur, pariatur illo. Autem perferendis expedita corporis est
+          mollitia totam atque deleniti accusamus quasi?
+        </p>
+        <nav class="social_networks_nav">
+          <ul class="social_networks_list">
+            <li class="social_networks_item">
+              <a href="·">Github</a>
+              <img src="./img/main/arrow_back_black_24dp 1.png" alt="logo_nav" />
+            </li>
+            <li class="social_networks_item">
+              <a href="·">Linkedin</a>
+              <img src="./img/main/arrow_back_black_24dp 1.png" alt="logo_nav" />
+            </li>
+            <li class="social_networks_item">
+              <a href="·">Instagram</a>
+              <img src="./img/main/arrow_back_black_24dp 1.png" alt="logo_nav" />
+            </li>
+          </ul>
+        </nav>
+      </article>
+      <img src="./img/main/unsplash_anAAZ0nrqBY.png" alt="img_me" />
+    </section>
+
+    <section class="aboutme_section_container">
+      <article class="aboutme_article">
+        <header>
+          <h1 class="title_section">About Me</h1>
+        </header>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Consectetur deleniti, quibusdam aperiam ducimus quam amet sunt
+          laboriosam reiciendis modi praesentium provident reprehenderit
+          iusto, quas voluptatum suscipit enim velit cupiditate eaque.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+          veniam voluptate illo placeat sint culpa? Doloremque, minus minima
+          velit omnis iure odio inventore suscipit aliquid assumenda iste
+          possimus temporibus vel.
+        </p>
+      </article>
+    </section>
+
+    <section class="skills_section_container">
+      <article class="skills_article">
+        <header></header>
+        <h1 class="title_section">Skills</h1>
+        </header>
+        <ul class="skills_list">
+          <li class="skills_item">
+            <p>Html5</p>
+            <img src="./img/main/skills/html.png" alt="logo_html">
+          </li>
+          <li class="skills_item">
+            <p>css</p>
+            <img src="./img/main/skills/css-file 1.png" alt="logo_css">
+          </li>
+          <li class="skills_item">
+            <p>JavaScript</p>
+            <img src="./img/main/skills/js.png" alt="logo_js">
+          </li>
+          <li class="skills_item">
+            <p>C++</p>
+            <img src="./img/main/skills/c++.png" alt="logo_c++">
+          </li>
+          <li class="skills_item">
+            <p>Node JS</p>
+            <img src="./img/main/skills/nodejs.png" alt="logo_nodejs">
+          </li>
         </ul>
-      </nav>
-    </header>
+      </article>
+    </section>
 
-    <main class="container">
-      <section class="principal_section_container">
-        <article class="principal_article">
-          <header>
-            <h1 class="principal_title">
-              Hi, my name is José Granados and I am learning web development
-            </h1>
-          </header>
-          <p>
-            Trained in ... Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit. Maiores neque fugiat libero perspiciatis id suscipit tenetur
-            consequatur, pariatur illo. Autem perferendis expedita corporis est
-            mollitia totam atque deleniti accusamus quasi?
-          </p>
-          <nav class="social_networks_nav">
-            <ul class="social_networks_list">
-              <li class="social_networks_item">
-                <a href="·">Github</a>
-                <img
-                  src="./img/main/arrow_back_black_24dp 1.png"
-                  alt="logo_nav"
-                />
-              </li>
-              <li class="social_networks_item">
-                <a href="·">Linkedin</a>
-                <img
-                  src="./img/main/arrow_back_black_24dp 1.png"
-                  alt="logo_nav"
-                />
-              </li>
-              <li class="social_networks_item">
-                <a href="·">Instagram</a>
-                <img
-                  src="./img/main/arrow_back_black_24dp 1.png"
-                  alt="logo_nav"
-                />
-              </li>
-            </ul>
-          </nav>
+    <section class="hobbies_section_container">
+      <article class="hobbies_article">
+        <header></header>
+        <h1 class="title_section">Hobbies</h1>
+        </header>
+        <ul class="hobbies_list">
+          <li class="hobbies_item">
+            <p>GYM</p>
+            <img src="./img/main/hobbies/gym.png" alt="logo_gym">
+          </li>
+          <li class="hobbies_item">
+            <p>Listen to music</p>
+            <img src="./img/main/hobbies/music.png" alt="logo_music">
+          </li>
+          <li class="hobbies_item">
+            <p>Watch series</p>
+            <img src="./img/main/hobbies/seires.png" alt="logo_series">
+          </li>
+          <li class="hobbies_item">
+            <p>Cook</p>
+            <img src="./img/main/hobbies/cook.png" alt="logo_cook">
+          </li>
+          <li class="hobbies_item">
+            <p>Play video games</p>
+            <img src="./img/main/hobbies/video games.png" alt="logo_video_games">
+          </li>
+        </ul>
+      </article>
+    </section>
+
+    <section class="academy_training_section_container">
+      <article class="academy_training_article">
+        <header></header>
+        <h1 class="title_section">Academy Training</h1>
+        </header>
+        <ul class="academy_training_list">
+          <li class="academy_training_item">
+            <div class="academy_training_img">
+              <img src="./img/main/academy/unimag.png" alt="logo_unimag">
+            </div>
+            <h2>Electronic engineer</h2>
+            <p>2022 - Universidad del Magdalena</p>
+          <li class="academy_training_item">
+            <div class="academy_training_img">
+              <img src="./img/main/academy/alura.png" alt="logo_alura">
+            </div>
+            <h2>Front End G7 - ONE</h2>
+            <p>In progress - Alura</p>
+          </li>
+          <li class="academy_training_item">
+            <div class="academy_training_img">
+              <img src="./img/main/academy/udecataluña.png" alt="logo_alura">
+            </div>
+            <h2>Diplomado en Desarrollo Web </h2>
+            <p>In progress - U de Cataluña</p>
+          </li>
+        </ul>
+      </article>
+    </section>
+
+    <section class="projects_section_container">
+      <header></header>
+      <h1 class="title_section">Projects</h1>
+      </header>
+      <div>
+        <article class="project_article">
+          <img src="./img/main/projects/text_encrypt.png" alt="img_text_encrypt">
+          <div>
+            <h2>Text Encryptor</h2>
+            <p>Challenge Alura</p>
+            <button>Repository</button>
+          </div>
         </article>
-        <img src="./img/main/unsplash_anAAZ0nrqBY.png" alt="img_me" />
-      </section>
+      </div>
+    </section>
+  </main>
 
-      <section class="aboutme_section_container">
-        <article class="aboutme_article">
-          <header>
-            <h1 class="title_section">About Me</h1>
-          </header>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Consectetur deleniti, quibusdam aperiam ducimus quam amet sunt
-            laboriosam reiciendis modi praesentium provident reprehenderit
-            iusto, quas voluptatum suscipit enim velit cupiditate eaque.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
-            veniam voluptate illo placeat sint culpa? Doloremque, minus minima
-            velit omnis iure odio inventore suscipit aliquid assumenda iste
-            possimus temporibus vel.
-          </p>
-        </article>
-      </section>
+  <footer></footer>
+</body>
 
-      <section class="skills_section_container">
-        <article class="skills_article">
-          <header></header>
-            <h1 class="title_section">Skills</h1>
-          </header>
-          <ul class="skills_list">
-            <li class="skills_item">
-              <p>Html5</p>
-              <img src="./img/main/skills/html.png" alt="logo_html">
-            </li>
-            <li class="skills_item">
-              <p>css</p>
-              <img src="./img/main/skills/css-file 1.png" alt="logo_css">
-            </li>
-            <li class="skills_item">
-              <p>JavaScript</p>
-              <img src="./img/main/skills/js.png" alt="logo_js">
-            </li>
-            <li class="skills_item">
-              <p>C++</p>
-              <img src="./img/main/skills/c++.png" alt="logo_c++">
-            </li>
-            <li class="skills_item">
-              <p>Node JS</p>
-              <img src="./img/main/skills/nodejs.png" alt="logo_nodejs">
-            </li>
-          </ul>
-        </article>
-      </section>
-      
-      <section class="hobbies_section_container">
-        <article class="hobbies_article">
-          <header></header>
-            <h1 class="title_section">Hobbies</h1>
-          </header>
-          <ul class="hobbies_list">
-            <li class="hobbies_item">
-              <p>GYM</p>
-              <img src="./img/main/hobbies/gym.png" alt="logo_gym">
-            </li>
-            <li class="hobbies_item">
-              <p>Listen to music</p>
-              <img src="./img/main/hobbies/music.png" alt="logo_music">
-            </li>
-            <li class="hobbies_item">
-              <p>Watch series</p>
-              <img src="./img/main/hobbies/seires.png" alt="logo_series">
-            </li>
-            <li class="hobbies_item">
-              <p>Cook</p>
-              <img src="./img/main/hobbies/cook.png" alt="logo_cook">
-            </li>
-            <li class="hobbies_item">
-              <p>Play video games</p>
-              <img src="./img/main/hobbies/video games.png" alt="logo_video_games">
-            </li>
-          </ul>
-        </article>
-      </section>
-
-      <section class="academy_training_section_container">
-        <article class="academy_training_article">
-          <header></header>
-            <h1 class="title_section">Academy Training</h1>
-          </header>
-          <ul class="academy_training_list">
-            <li class="academy_training_item">
-              <div class="academy_training_img">
-                <img src="./img/main/academy/unimag.png" alt="logo_unimag">
-              </div>
-              <h2>Electronic engineer</h2>
-              <p>2022 - Universidad del Magdalena</p>
-            <li class="academy_training_item">
-              <div class="academy_training_img">
-                <img src="./img/main/academy/alura.png" alt="logo_alura">
-              </div>
-              <h2>Front End G7 - ONE</h2>
-              <p>In progress - Alura</p>
-            </li>
-            <li class="academy_training_item">
-              <div class="academy_training_img">
-                <img src="./img/main/academy/udecataluña.png" alt="logo_alura">
-              </div>
-              <h2>Diplomado en Desarrollo Web </h2>
-              <p>In progress - U de Cataluña</p>
-            </li>
-          </ul>
-        </article>
-      </section>
-
-      <section class="Projects"></section>
-    </main>
-
-    <footer></footer>
-  </body>
 </html>
