--- a/index.html
+++ b/index.html
@@ -189,9 +189,33 @@
         </article>
       </div>
     </section>
+
+    <section class="contact_section">
+      <article class="contact_article">
+        <img src="./img/main/contact/contact.png" alt="img_contact">
+        <article class="contact_article_form">
+          <div class="contact_title_text">
+            <h1 class="title_section">Contact</h1>
+            <p>
+              Would you like to contact me? <br>Please fill out the form below and I will get back to you as soon as
+              possible.
+            </p>
+          </div>
+          <form class="contact_form" action="">
+            <input class="contact_form_input" type="text" name="Name"  placeholder="Name" required>
+            <input class="contact_form_input" type="text" name="E-mail"  placeholder="E-mail" required>
+            <input class="contact_form_input" type="text" name="Affair"  placeholder="Affair" required>
+            <input class="contact_form_input" type="text" name="Message"  placeholder="Message" style="height: 133px;" required>
+          </form>
+          <button>Send message</button>
+        </article>
+      </article>
+    </section>
   </main>
 
-  <footer></footer>
+  <footer>
+    <p>Developer by José Granados <br>2024</p>
+  </footer>
 </body>
 
 </html>
